<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".BuscarJuegos"

android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingBottom="10sp"
    android:paddingTop="10sp"
    android:textColor="#3F51B5"
    android:textSize="24sp"
    android:textStyle="bold"

    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_titulo"

    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bus_txtTitulo"
    android:hint="@string/str_buscarJuego"
    android:inputType="text"
    />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/bus_btnBuscar"
    android:text="@string/str_btnBuscar"
    android:layout_gravity="center_horizontal"
    android:onClick="onClick"
    />




</LinearLayout>